// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UserPosts /> should render component with login 1`] = `
<div
  className="user-posts-container limited-width"
>
  <h2>
    Your reviews
  </h2>
  <table
    className="reviews-table"
  >
    <thead>
      <tr>
        <th>
          Title
        </th>
        <th
          className="only-wide-screen"
        >
          Country
        </th>
        <th>
          Date
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td
          className="post-title"
        >
          <Link
            to="/user/edit-post/id"
          >
            title
          </Link>
        </td>
        <td
          className="only-wide-screen"
        >
          country
        </td>
        <td>
          Invalid Date
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`<UserPosts /> should render component with no login 1`] = `
<div
  className="user-posts-container limited-width"
>
  <h2>
    Your reviews
  </h2>
  <table
    className="reviews-table"
  >
    <thead>
      <tr>
        <th>
          Title
        </th>
        <th
          className="only-wide-screen"
        >
          Country
        </th>
        <th>
          Date
        </th>
      </tr>
    </thead>
    <tbody />
  </table>
</div>
`;
